# CppUnitTest

./: .gitignore  CMakeLists.txt  Exam.cpp  Exam.hpp  Log.hpp  Main.cpp  README.md
tests/: ExampleQuiz.txt
